# dummytest

./: .dummytestignore  .gitignore  License.txt  README.md  dummytest.ini  pyproject.toml
.github/workflows/: sync-version.yml
_dummytest/: _version.py  assertions.py  asserts.py  cli.py  collect.py  color.py  const.py  exceptions.py  explain.py  find.py  fixtures.py  ignores.py  main.py  plugins.py  print.py  run.py  warnings.py
_dummytest/config/: config.py  toml.py
_errortest/: __init__.py  _version.py  collect.py  const.py  expect.py  find.py  run.py
dummytest/: __init__.py  __main__.py
errortest/: __init__.py
tests/: __init__.py  conftest.py  test_assertions.py  test_collect.py  test_config.py  test_config_files.py  test_exceptions.py  test_explain.py  test_fixtures.py  test_ignores.py  test_plugins.py  test_run.py  test_toml_config.py
