[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-dummy"
version = "0.0.1-beta2"
description = "Plugins, fixtures, workflows, unit and functional tests with Python."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.scripts]
dummytest = "_dummytest.main:main"

[tool.setuptools.packages.find]
include = ["dummytest*", "_dummytest*"]

